--- a/HikikomoriShop.UI/HikikomoriShop.UI.csproj
+++ b/HikikomoriShop.UI/HikikomoriShop.UI.csproj
@@ -7,19 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <_ContentIncludedByDefault Remove="wwwroot\css\site.css" />
-      <_ContentIncludedByDefault Remove="wwwroot\js\site.js" />
-      <_ContentIncludedByDefault Remove="Views\Shared\Error.cshtml" />
-      <_ContentIncludedByDefault Remove="Views\Shared\_Layout.cshtml" />
-      <_ContentIncludedByDefault Remove="Views\Shared\_ValidationScriptsPartial.cshtml" />
+      <None Include="wwwroot\css\bundle.min.css" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
-      <Folder Include="Models\" />
-      <Folder Include="Properties\" />
-      <Folder Include="Views\" />
-      <Folder Include="wwwroot\" />
+      <ProjectReference Include="..\HikikomoriShop.Application\HikikomoriShop.Application.csproj" />
+      <ProjectReference Include="..\HikikomoriShop.Infrastructure\HikikomoriShop.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
